<resources>
    <string name="app_name">MemoriaAlvaradoCastillo</string>
    <string name="app_name2">Juego de Memoria</string>
    <string name="descripcion">Memoria( nivel:experto )</string>
    <string name="label">Pepe</string>
    <string name="titulo_ajustes">Ajustes</string>
    <string name="titulo_salir">Salir del nivel</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="titulo_voz">Voz</string>
    <string name="default_voz">f</string>
    <string-array name="titulos_voz">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="valores_voz">
        <item>m</item>
        <item>f</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="titulo_dificultad">Dificultad</string>
    <string name="default_dificultad">1</string>
    <string-array name="titulos_dificultades">
        <item>Inicial</item>
        <item>Intermedio</item>
        <item>Avanzado</item>
        <item>Experto</item>
    </string-array>
    <string-array name="valores_dificultades">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="titulo_tiempo">Tiempo</string>
    <string name="default_tiempo">0</string>
    <string-array name="titulos_tiempo">
        <item>Ilimitado</item>
        <item>10 segundos</item>
        <item>20 segundos</item>
        <item>30 segundos</item>
        <item>40 segundos</item>
        <item>50 segundos</item>
        <item>60 segundos</item>
    </string-array>
    <string-array name="valores_tiempo">
        <item>0</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>

    <string name="titulo_imagenes">Imagenes</string>
    <string-array name="titulos_imagenes">
        <item>aros</item>
        <item>arriador</item>
        <item>bajo_montura</item>
        <item>bozal</item>
        <item>caballo</item>
        <item>cabezada</item>
        <item>casco</item>
        <item>cascos</item>
        <item>cepillo</item>
        <item>cinchon_de_volteo</item>
        <item>cola</item>
        <item>crines</item>
        <item>cuerda</item>
        <item>escarba_vasos</item>
        <item>fusta</item>
        <item>matra</item>
        <item>montura</item>
        <item>monturin</item>
        <item>ojo</item>
        <item>orejas</item>
        <item>palos</item>
        <item>pasto</item>
        <item>pelota</item>
        <item>rasqueta</item>
        <item>riendas</item>
        <item>zanahoria</item>
    </string-array>


</resources>
